--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-html, body {
+body {
   height: 100%;
   width: 100%;
   font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  
 }
 .cnt-box{
   background-image: url('bg-intro-desktop.png') ;
@@ -9,14 +12,19 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 .remdr bold{
   color: red; 
+  opacity: 1;
+  font-weight: 600px;
+  font-size: 7px;
 }
 .remdr{
- font-size: 6px ;
+ font-size: 7px ;
  opacity: 0.5;
+ text-align: center;
 }
 #button{
  text-transform: uppercase;
@@ -25,29 +33,71 @@ html, body {
  padding: 15px 70px;
  border-radius: 5px;
  border: 0;
+ font-size: 10px;
+ width: 100%;
 }
 .try{
   border-radius: 5px;
   background-color:  hsl(248, 32%, 49%);
   color: white;
-  font-size: 15px;
+  font-size: 10px;
   padding: 10px 40px;
   margin-bottom: 15px;
+  text-align: center;
+  font-weight: 300px;
+  width: 95%;
+  box-shadow: 0 5px #171616;
 }
 .form{
   background-color: white;
-  padding: 10px 10px 15px 10px;
+  padding: 30px;
   border-radius: 5px;
+  width: 100%;
+  box-shadow: 0 5px #171616;
 }
 .content{
   color: white;
-  padding: 10px;
-  width: 35%
-    
+  padding: 50px;
+  width: 25%;
+  margin: 40px;
+  opacity: 0.8;
+  text-shadow: 0 0 2px #fff;
+}
+.content h1{
+  line-height: 1.2;
 }
 .content p{
   font-size: 10px;
+  font-weight: 600px;
+  
 }
 .cont2{
   margin: 70px 0;
+  height: 20%;
+  padding: 60px 0;
 }
+input::placeholder{
+  font-size: 12px;
+}
+input{
+  width: 100%; 
+  padding: 10px 12px; 
+  border: 1px solid #ccc; 
+  border-radius: 4px; 
+  box-sizing: border-box;
+  margin-top: 0; 
+  margin-bottom: 1px; 
+  resize: vertical;
+}
+@media (max-width: 375px) {
+
+    .cnt-box{
+         background-image: url('bg-intro-mobile.png') ;
+         background-color: hsl(0, 100%, 74%);
+         display: flex;
+         justify-content: center;
+         align-items: center;
+    }
+    
+
+} 
