--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
   height: 100%;
   width: 100%;
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
-  
+  color: white;
 }
 .cnt-box{
   background-image: url('bg-intro-desktop.png') ;
@@ -12,64 +16,85 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
   
 }
 
-.remdr bold{
-  color: red; 
-  opacity: 1;
-  font-weight: 600px;
-  font-size: 7px;
+small a {
+    color: #ff4d4d;
+    text-decoration: none;
+    font-weight: 600;
 }
-.remdr{
- font-size: 7px ;
- opacity: 0.5;
- text-align: center;
+small {
+    color: #bbb;
+    display: block;
+    font-size: 9px;
+    font-weight: 500;
+    margin-top: 15px;
+    text-align: center;
 }
 #button{
  text-transform: uppercase;
  background-color: hsl(154, 59%, 51%); 
  color: white;
- padding: 15px 70px;
+ padding: 15px 25px;
+ margin-top: 1px;
  border-radius: 5px;
- border: 0;
- font-size: 10px;
- width: 100%;
+ font-size: 12px;
+ width: 365px;
+ border: 1px solid;
+ font-weight: 500;
+ display: block;
+ letter-spacing: 1px;
+}
+#button:hover{
+  opacity: 0.7;
+  cursor: pointer;
 }
 .try{
   border-radius: 5px;
   background-color:  hsl(248, 32%, 49%);
   color: white;
   font-size: 10px;
-  padding: 10px 40px;
+  padding: 5px 25px;
   margin-bottom: 15px;
   text-align: center;
-  font-weight: 300px;
-  width: 95%;
-  box-shadow: 0 5px #171616;
+  box-shadow: 0 6px rgb(0, 0, 0, 0.2);
+}
+.try p{
+  font-weight: lighter;
+ 
 }
 .form{
+  box-shadow: 0 6px rgb(0, 0, 0, 0.2);
   background-color: white;
-  padding: 30px;
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+  padding: 1.5rem ;
   border-radius: 5px;
-  width: 100%;
-  box-shadow: 0 5px #171616;
+  width: 410px;
+  height: 380px;
 }
+div .label-1{
+  height: 40px;
+  
+}
+
 .content{
   color: white;
   padding: 50px;
-  width: 25%;
+  width: 35%;
   margin: 40px;
-  opacity: 0.9;
-  text-shadow: 0 0 2px #fff;
 }
 .content h1{
+  font-size: 40px;
   line-height: 1.2;
+  
 }
 .content p{
-  font-size: 10px;
-  font-weight: 600px;
-  
+  font-size: 12px;
+  font-weight: 100px;
+  opacity: 0.9;
 }
 .cont2{
   margin: 70px 0;
@@ -77,27 +102,64 @@ body {
   padding: 60px 0;
 }
 input::placeholder{
-  font-size: 12px;
+  font-size: 10px;
+  font-weight: 600;
+ 
 }
 input{
   width: 100%; 
-  padding: 10px 12px; 
+  padding: 12px; 
   border: 1px solid #ccc; 
   border-radius: 4px; 
-  box-sizing: border-box;
+  box-sizing: border-box; 
   margin-top: 0; 
-  margin-bottom: 1px; 
+  margin-bottom: 0; 
   resize: vertical;
 }
-@media (max-width: 375px) {
+input:focus {
+    border: 1.3px solid hsl(248, 32%, 49%);
+    outline: none;
+}
+/*input:invalid {
+    outline: none;
+    border: 2px solid hsl(0, 100%, 74%);
+    color: (0, 100%, 74%);
+    background-image: url('icon-error.svg');
+    background-repeat: no-repeat;
+    background-position: right;
+    background-origin: content-box;
+    font-size: 12px;
+    font-weight: 600;
+}
 
-    .cnt-box{
-         background-image: url('bg-intro-mobile.png') ;
-         background-color: hsl(0, 100%, 74%);
-         display: flex;
-         justify-content: center;
-         align-items: center;
+input:invalid+span {
+    display: block;
+    font-weight: 600;
+    font-style: italic;
+    color: hsl(0, 100%, 74%);
+    margin-left: 65%;
+}
+
+input:valid {
+    outline: none;
+    border: 1px solid hsl(154, 59%, 51%);
+}
+
+span {
+    display: none;
+    font-size: 10px;
+}*/
+@media screen and (max-width: 375px) {
+   .content h1 {
+        text-align: center;
     }
-    
-
-} 
+    p {
+        text-align: center;
+    }
+    .cnt-box {
+        flex-direction: column;
+    }
+    .try{
+        padding: 10px;
+    }
+}
